# Cpp-Logger

./: .gitmodules  CMakeLists.txt  Makefile  out.txt
Inc/: ILogItem.h  LogLevel.h  SimpleLogItem.h  SimpleLogger.h
Src/: CMakeLists.txt  SimpleLogItem.cpp  SimpleLogger.cpp
Tests/: CMakeLists.txt  TestRunner.cpp  TestSimpleLogger.h
Tests/TestFiles/: LogFile.txt
